2018-03-21  Charlie Zender  <zender@uci.edu>

	* NCO 4.7.4-alpha03 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.7.4-alpha03: Rancho Leonero';git push
	git tag -a 4.7.4-alpha03 -m 'clarify where(), CDF5 fix';git push --tags

	* Filipe Fernandes fixed breakage caused by AppVeyor update

	* Verify new netCDF 4.6.1 release fixes CDF5 bug. Update NCO warning messages, docs, and CDF5 workarounds.

2018-03-21 Henry Butowsky  <henryb@hush.com>

	* Modify where() statement to terminate script if it encounters an LHS var with indices

2018-03-13  Charlie Zender  <zender@uci.edu>

	* NCO 4.7.4-alpha02 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.7.4-alpha02: AquaLung Look2 Impulse3';git push
	git tag -a 4.7.4-alpha02 -m 'support absolute/relative OOG paths for CF attributes';git push --tags

	* ncremap guesses unstructured dimension is first dimension with size n_a in input map file src_grid_dims[0]

	* Add Unicode test file (ref_utf8.cdl) copied from netCDF source

	* Support absolute and relative paths to out-of-group (OOG) variables in CF attributes as per CF2 Group specification

	* Add ncremap versions of ncks HINTs in nco_rgr.c

2018-03-11  Charlie Zender  <zender@uci.edu>

	* Add gridcell to nco_rgr_wgt() guesses for unstructured dimension (fixes PJCS problem regridding ne30 surfdata)

2018-03-09  Charlie Zender  <zender@uci.edu>

	* Change NCO attribute from VERSION to "netCDF Operators version VERSION (http://nco.sf.net)"

2018-03-02  Charlie Zender  <zender@uci.edu>

	* NCO 4.7.4-alpha01 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.7.4-alpha01: Flo Rida';git push
	git tag -a 4.7.4-alpha01 -m 'Functionally identical to 4.7.3';git push --tags

	* NCO 4.7.3 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.7.3: Avid Poi';git push
	git tag -a 4.7.3 -m 'sanitize, --a2o, --nm_typ, --fmt_val, --fl_prn, deprecate ncap';git push --tags

2018-03-01  Charlie Zender  <zender@uci.edu>

	* NCO 4.7.3-beta01 release procedure: