@@ -124,11 +124,8 @@ netcdf in_grp_3 {
     vrt_nbr=1,2;
     lev_wgt=9,2,1;
   } // end g8
-  
- 
-  //
+
   //g16 
-  //
   // Test variables and dimensions in and out of scope
   // Use case of variable in scope of dimension:
   // dimension /lon 
@@ -136,16 +133,14 @@ netcdf in_grp_3 {
   // Use case of variable NOT in scope of dimension:
   // variable /lon
   // dimension /g1/lon
-  //
   // Test dimensions with no associated coordinate variable
-  //
   group: g16 { 
     dimensions:
     lat=2;
-    lon1=4;  //dimension that has a coordinate variable down in scope at /g16/g16g1/lon1(lon1)
-    lon2=4;  //dimension that does NOT have a coordinate variable anywhere 
-    lon3=4;  //dimension that has a coordinate "out of scope" (with group depth greater than the variable that uses the coordinate, g16g3g3)
-    lon4=2;  //dimension that has several intermediate "in scope" coordinates
+    lon1=4; // dimension that has a coordinate variable down in scope at /g16/g16g1/lon1(lon1)
+    lon2=4; // dimension that does NOT have a coordinate variable anywhere 
+    lon3=4; // dimension that has a coordinate "out of scope" (with group depth greater than the variable that uses the coordinate, g16g3g3)
+    lon4=2; // dimension that has several intermediate "in scope" coordinates
     lat4=2;
     variables:
     float lat1(lat);
@@ -199,7 +194,7 @@ netcdf in_grp_3 {
     
     group: g16g4 { 
      variables:
-     //intermediate "in scope " coordinate
+     // intermediate "in scope" coordinate
      float lon4(lon4);
      float blon3;
      data:
@@ -207,19 +202,19 @@ netcdf in_grp_3 {
      blon3=8.0;
       group: g16g4g1 { 
       variables:
-      //intermediate "in scope " coordinate
+      // intermediate "in scope " coordinate
       float lon4(lon4);
       data:
       lon4=3.,4.; 
       
         group: g16g4g1g1 { 
         variables:
-        //variable that uses one of the intermediate "in scope " coordinate
+        // variable that uses one of the intermediate "in scope" coordinates
 	float blon4;
 	float blat2;
         float lon4_var(lon4);
-	      // check retrival of bounds var(s) -scope, scope, absolute path, relative path
-	      lon4_var:bounds="blon4 blon3 /g16/blon2 ../g16g4g1g1/g16g4g1g1g1/blon1";
+        // check retrieval of bounds var(s) -scope, scope, absolute path, relative path
+        lon4_var:bounds="blon4 blon3 /g16/blon2 ../g16g4g1g1/g16g4g1g1g1/blon1";
         data:
 	blon4=10.0;
 	blat2=2.0;
@@ -228,8 +223,8 @@ netcdf in_grp_3 {
         group: g16g4g1g1g1 {
 	 variables:
 	  float lat4_var(lat4);
-	        // check retrival of "coordinate vars"  curr directory, relative path, absolute path, absolute path
-	        lat4_var:coordinates="./blat1 ../blat2 /g16/blat3 /g16/g16g1/blat4"; 
+          // check retrieval of "coordinate vars" current directory, relative path, absolute path, absolute path
+          lat4_var:coordinates="./blat1 ../blat2 /g16/blat3 /g16/g16g1/blat4"; 
 	  float blon1;
 	  float blat1;
 	data:
