@@ -782,12 +782,13 @@ nco_sng_sntz /* [fnc] Ensure input string contains only white-listed innocuous c
      20180214: White-list forward slash on UNIX, backslash on Windows (path separators) 
      20180222: White-list percent sign (NCO regression test uses, e.g., %tmp_fl_00)
      20180227: White-list forward slash on Windows so URLs are acceptable (http://...)
-     Crucial characters that are implicitly blacklisted (and could be transformed into underscores) are:
-     ";|<>[](),*&" */
+     20180323: White-list question mark and asterisk so shell-globbing works (in*.nc, in?.nc)
+     Crucial characters that are currently implicitly blacklisted (and could be transformed into underscores) are:
+     ";|<>[](),&" */
   static char wht_lst[]="abcdefghijklmnopqrstuvwxyz"
     "ABCDEFGHIJKLMNOPQRSTUVWXYZ"
     "1234567890_-.@"
-    " :%/"
+    " :%/*?"
 #ifdef _MSC_VER
     "\\"
 #endif /* !_MSC_VER */
@@ -796,20 +797,27 @@ nco_sng_sntz /* [fnc] Ensure input string contains only white-listed innocuous c
 
   char *usr_dta=sng_drt;
   char *cp=usr_dta; /* Cursor into string */
+  nco_bool flg_blk_lst=False;
   
-  if(nco_dbg_lvl_get() >= nco_dbg_io) (void)fprintf(stderr,"%s: DEBUG %s reports unsanitized usr_dta = %s\n",nco_prg_nm_get(),fnc_nm,usr_dta);
-
   const char *sng_end=usr_dta+strlen(usr_dta);
   for(cp+=strspn(cp,wht_lst);cp!=sng_end;cp+=strspn(cp,wht_lst)){
-    (void)fprintf(stderr,"%s: ERROR %s reports character \'%c\' from unsanitized user-input string \"%s\" is not on whitelist of acceptable characters. For security purposes NCO restricts the set of characters appearing in user input, including filenames, to: \"%s\". NB: This restriction was first imposed in NCO 4.7.3 (February, 2018), and may cause breakage of older workflows. Please contact NCO if you have a real-world use-case that shows why the character \'%c\' should be white-listed. HINT: Re-try command after replacing transgressing characters with innocuous characters.\n",nco_prg_nm_get(),fnc_nm,*cp,usr_dta,wht_lst,*cp);
     /* Uncomment next two lines to sanitize unsafe character with an underscore
      *cp='_';
      if(nco_dbg_lvl_get() >= nco_dbg_io) (void)fprintf(stderr,"%s: DEBUG %s reports sanitized usr_dta = %s\n",nco_prg_nm_get(),fnc_nm,usr_dta); */
-
-    /* Provide escape route so newly broken workflows will still work with -D 73
-       Eliminate back-door after a few new versions of NCO, e.g., by version 4.7.5 */
-    if(nco_dbg_lvl_get() != 73) nco_exit(EXIT_FAILURE);
+    flg_blk_lst=True;
+    break;
   } /* !cp */
+
+  if(flg_blk_lst){
+    if(nco_dbg_lvl_get() == 73){
+      /* Provide escape route so newly broken workflows will still work with -D 73
+	 Eliminate this "back-door" after a few new versions of NCO, e.g., by version 4.7.5 */
+      (void)fprintf(stderr,"%s: WARNING %s reports manual override of exit() due to black-listed character \'%c\' from unsanitized user-input string \"%s\".\n",nco_prg_nm_get(),fnc_nm,*cp,usr_dta);
+    }else{
+      (void)fprintf(stderr,"%s: ERROR %s reports character \'%c\' from unsanitized user-input string \"%s\" is not on whitelist of acceptable characters. For security purposes NCO restricts the set of characters appearing in user input, including filenames, to: \"%s\". NB: This restriction was first imposed in NCO 4.7.3 (February, 2018), and may cause breakage of older workflows. Please contact NCO if you have a real-world use-case that shows why the character \'%c\' should be white-listed. HINT: Re-try command after replacing transgressing characters with innocuous characters.\n",nco_prg_nm_get(),fnc_nm,*cp,usr_dta,wht_lst,*cp);
+      nco_exit(EXIT_FAILURE);
+    } /* !dbg */
+  } /* !flg_blk_lst */
 
   return usr_dta;
 } /* !nco_sng_sntz() */
